--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
