--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require("path");
 
 module.exports = {
-  config: path.resolve("config", "database.js"),
-  "model-path": path.resolve("app", "models"),
+  "config": path.resolve("config", "database.js"),
+  "models-path": path.resolve("app", "models"),
   "seeders-path": path.resolve("db", "seeders"),
-  "migrations-path": path.resolver("db", "migrations"),
+  "migrations-path": path.resolve("db", "migrations"),
 };
